Z-index issue addressed

--- a/src/Header/Nav.css
+++ b/src/Header/Nav.css
@@ -1,15 +1,16 @@
 #nav {
-    display: flex;
-    flex-direction: row;
-    background-color: rgb(36, 42, 56);
-    height: 50px;
-    padding: 20px;
-    padding-right: 5px;
-    color: white;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-  }
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(36, 42, 56);
+  height: 50px;
+  padding: 20px;
+  padding-right: 5px;
+  color: white;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 
 #nav h2 {
   margin-left: 30px;
